Fix: Windows scrollbar issue

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -33,7 +33,7 @@
   /* specific widths */
   --max-container-width: 150rem;
   --max-sidebar-width: 30rem;
-  --image-card-size: 13.125rem;
+  --image-card-size: 12.75rem;
 
   /* Typography */
   --font-weight-normal: 400;
